src/objects/SPE_TrackerScore__c.object
<CustomObject>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <formula>TEXT( SPETracker__r.BusinessLine__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <formula>TEXT(SPETracker__r.BusinessLine__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryArea__c</fullName>
        <formula>SPETracker__r.CategoryCluster__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <formula>SPETracker__r.CategoryGroup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>SPETracker__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>SPETracker__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Pillar</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPIName__c</fullName>
        <label>KPI Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketUnit__c</fullName>
        <formula>SPETracker__r.SubRegion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>SPETracker__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>SPETracker__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>SPETracker__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPEScore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPE Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPETracker__c</fullName>
        <label>SPE Tracker</label>
        <referenceTo>SPE_SPETracker__c</referenceTo>
        <relationshipLabel>Tracker Scores</relationshipLabel>
        <relationshipName>Tracker_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SPE_Rank__c</fullName>
        <label>SPE Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPE_TemplateName__c</fullName>
        <formula>SPETracker__r.SPETemplate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPE Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tracker Scores</relationshipLabel>
        <relationshipName>Tracker_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tracker Score</label>
    <nameField>
        <displayFormat>Score-{0000}</displayFormat>
        <label>Tracker Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracker Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>